--- a/app/templates/exam_dates.html
+++ b/app/templates/exam_dates.html
@@ -438,4 +438,15 @@
         {% endif %}
     </div>
 </div>
+
+<script>
+document.getElementById('program_filter').addEventListener('input', function(e) {
+    // Приводим первую букву к верхнему регистру, остальные - к нижнему
+    const words = this.value.split(' ');
+    const transformedWords = words.map(word => {
+        return word.charAt(0).toUpperCase() + word.slice(1).toLowerCase();
+    });
+    this.value = transformedWords.join(' ');
+});
+</script>
 {% endblock %}
