--- a/app/templates/exam_dates.html
+++ b/app/templates/exam_dates.html
@@ -330,7 +330,7 @@
                             value="{{ program_filter }}"
                             placeholder="Введите название или код программы">
                         <div class="search-hint">
-                            Поиск не чувствителен к регистру. Например: "прогр" или "ПРОГР"
+                            Начните вводить код или направление
                         </div>
                     </div>
                 </div>
